Updated dark mode and fixed theme issues

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -4,12 +4,14 @@
     --secondary-color: #444;
     --background-color: #fff;
     --text-color: #333;
+    --project-bg-color: #f9f9f9; /* Light mode project background */
 }
 
 body.dark-mode {
-    --background-color: #1e1e1e;
-    --text-color: #f5f5f5;
-    --secondary-color: #333;
+    --background-color: #222020;
+    --text-color: #e0e0e0;
+    --secondary-color: #555;
+    --project-bg-color: #383333; /* Dark mode project background */
 }
 
 body {
@@ -326,13 +328,14 @@ nav ul li a.active {
 }
 
 .project {
-    background-color: #f9f9f9;
+    background-color: var(--project-bg-color);
     margin: 15px;
     width: 350px;
     overflow: hidden;
     border-radius: 10px;
     box-shadow: 0 8px 16px rgba(0,0,0,0.1);
     transition: transform 0.3s;
+    z-index: 1;
 }
 
 .project:hover {
@@ -348,6 +351,7 @@ nav ul li a.active {
 .project-info {
     padding: 20px;
     text-align: left;
+    z-index: 2;
 }
 
 .project-info h3 {
@@ -355,8 +359,7 @@ nav ul li a.active {
 }
 
 .project-info p {
-    font-size: 0.95em;
-    margin-bottom: 15px;
+    color: var(--text-color);
 }
 
 .project .btn {
@@ -366,7 +369,7 @@ nav ul li a.active {
 /* Contact Section */
 
 body.contact-page {
-    background-color: #ffffff;;
+    background-color: var(--background-color);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -390,24 +393,29 @@ body.contact-page {
 }
 
 #contact label {
+    color: var(--text-color);
     text-align: left;
     margin-bottom: 5px;
     font-weight: bold;
+    display: block;
 }
 
 #contact input,
 #contact textarea {
     padding: 10px;
     margin-bottom: 15px;
-    border: 1px solid #ccc;
+    border: 1px solid var(--secondary-color);
     border-radius: 5px;
-    background: var(--background-color);
+    background-color: var(--background-color);
     color: var(--text-color);
+    transition: background-color 0.3s, color 0.3s, border-color 0.3s;
+    
 }
 
 #contact input:focus,
 #contact textarea:focus {
     border-color: var(--primary-color);
+    outline: none;
 }
 
 #contact button {
